- Gameplay Options can now be used as a forbidden/required choice for items; currently this is used for the Free Insect Spirit qualities, which require the Prime Runner gameplay choice. 
- Cyberware now supports the use of math operators in the ess and cost values. This allows for customdata files to easily make bulk changes to cyberware Essence and Cost entries.

Application Fixes:

- Slightly better implementation of the Upgrade mechanism for cyberware. Still needs work, but shouldn't improperly consume Essence anymore. 
- Fixed an issue with cyberware that should not permit subsystems still doing so. 
- Fixed incorrect consumption of capacity by modular limbs connecting to modular connectors. 
- Fixed the behaviour of the Death Mentor Spirit's Magician benefit to allow dicepool benefits for specific skills. Uses the spelldicepool improvement.
- Fixed an issue with traditions not probably updating.
- Fixed issues with use of Essence Antiholes in create mode that prevented them from working reliably.
- Fixed an issue with the selectatributes improvement that caused it to improperly allow Exceptional Attribute to select Edge.
- Fixed issues with Dedicated Spellslinger not working properly in career mode.
- Fixed a crash when opening the Print Multiple Characters dialog multiple times.
- Fixed incorrect metatype minimums for metasapients when using priority generation.
- Fixed missing matrix condition monitors for equipment.
- Fixed a parsing issue with the check for if multiple attributes could be at metatype max that could occasionally cause a clash.
- Fixed issues with the implementation of the dual attribute connection for shapeshifters that caused them to inconsistently use the correct attribute.
- Fixed an issue with the adding of One Trick Pony's free technique.
- Fixed behaviour of the selectweapon improvement that caused it to freeze if the ForcedItem quality were specified but the list of weapons did not contain the forced item.