@@ -1267,6 +1267,11 @@
       <dv>Special</dv>
       <range>Special</range>
       <type>M</type>
+      <bonus>
+        <addspirit>
+          <spirit>Watcher</spirit>
+        </addspirit>
+      </bonus>
     </spell>
     <spell>
       <id>f99ab85f-2cc7-4c09-8ea4-581f75e40487</id>
@@ -1280,6 +1285,44 @@
       <dv>Special</dv>
       <range>Special</range>
       <type>M</type>
+      <bonus>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Fragile)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Cheap Material)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Average Material)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Heavy Material)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Reinforced Material)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Structural Material)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Heavy Structural Material)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Armored Material)</spirit>
+        </addspirit>
+        <addspirit>
+          <addtoselected>False</addtoselected>
+          <spirit>Homonculus (Hardened Material)</spirit>
+        </addspirit>
+      </bonus>
     </spell>
     <!-- End Region -->
     <!-- Region Street Grimoire -->
@@ -2848,6 +2891,11 @@
       <dv>Special</dv>
       <range>Special</range>
       <type>M</type>
+      <bonus>
+        <addspirit>
+          <spirit>Ally Spirit</spirit>
+        </addspirit>
+      </bonus>
       <required>
         <allof>
           <metamagicart>Invocation</metamagicart>
@@ -3035,6 +3083,11 @@
       <dv>Special</dv>
       <range>Special</range>
       <type>M</type>
+      <bonus>
+        <addspirit>
+          <spirit>Ally Spirit</spirit>
+        </addspirit>
+      </bonus>
     </spell>
     <spell>
       <id>d0a24ff2-ca52-4d76-856a-60c30bf0ecf0</id>
@@ -4362,6 +4415,11 @@
       <dv>Special</dv>
       <range>Special</range>
       <type>M</type>
+      <bonus>
+        <addspirit>
+          <spirit>Corpse Cadavre</spirit>
+        </addspirit>
+      </bonus>
     </spell>
     <spell>
       <id>bd2bfef0-9de4-4870-9822-cdd504f7560f</id>
@@ -4657,6 +4715,23 @@
       <dv>Special</dv>
       <range>LOS</range>
       <type>P</type>
+      <bonus>
+        <addspirit>
+            <spirit>Carcass Spirit</spirit>
+        </addspirit>
+        <addspirit>
+            <spirit>Corpse Spirit</spirit>
+        </addspirit>
+        <addspirit>
+            <spirit>Rot Spirit</spirit>
+        </addspirit>
+        <addspirit>
+            <spirit>Palefire Spirit</spirit>
+        </addspirit>
+        <addspirit>
+            <spirit>Detritus Spirit</spirit>
+        </addspirit>
+      </bonus>
     </spell>
     <!-- Region Blood Magic Spells -->
     <spell>
